# books

./: CLAUDE.md  Cargo.toml
.github/workflows/: deploy.yml
public/: CNAME  robots.txt
public/covers/: bogleheads-guide-to-investing.miss  dogs-of-war.miss  instantiation.miss  introducing-jung.miss  john-woolman-s-autobiography.miss  (+9 more)
reviews/: 001-sapiens.md  002-zen-and-the-art-of-motorcycle-maintenance.md  003-life-3-0.md  004-wabi-sabi.md  005-the-age-of-analysis.md  006-philosophy-100-essential-thinkers.md  007-when-einstein-walked-with-g-del.md  008-keys-to-creativity.md  009-the-13-lives-of-captain-bluebear.md  010-the-myth-of-sisyphus.md  011-how-to-read-nature.md  012-mentors.md  013-the-art-of-thinking-clearly.md  014-skin-in-the-game.md  015-plight-of-the-living-dead.md  016-the-book.md  017-supermarket.md  018-thus-spake-zarathustra.md  019-become-what-you-are.md  020-wanderings.md  021-energy-and-civilization.md  022-pocket-taoist-wisdom.md  023-astrophysics-for-people-in-a-hurry.md  024-buddha-s-brain.md  025-the-story-of-philosophy.md  026-the-doors-of-perception-heaven-and-hell.md  027-dune.md  028-the-moon-is-a-harsh-mistress.md  029-21-lessons-for-the-21st-century.md  030-the-three-body-problem.md  031-the-golden-ratio-the-divine-beauty-of-mathematics.md  032-foundation.md  033-the-power-of-myth.md  034-the-metamorphosis-of-prime-intellect.md  035-dune-messiah.md  036-the-dark-forest.md  037-death-s-end.md  038-oceanic.md  039-the-lessons-of-history.md  040-zen-in-the-art-of-archery.md  (+106 more)
src/: covers.rs  lib.rs  main.rs  parser.rs
style/: main.css
(+4 files in other folders)
